# AI-Purple-Ops

./: .cursorignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORE_INTERFACES_REPORT.md  GIT_DIFF_HISTORY.txt  Makefile  README.md  RELEASE_NOTES_v1.2.2.md  SECURITY.md  VOICE_GUIDE.md  alembic.ini  mypy.ini  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: aipo-redteam.yml  ci.yaml
adapters/: README.md
adapters/models/: README.md
adapters/platform/: README.md
adapters/templates/: README.md  custom_http.yaml  mcp.yaml
api/: README.md  openapi.yaml  stub_server.py
cli/: README.md  __init__.py  __main__.py  batch.py  cached_lookup.py  ctf.py  debug_commands.py  doctor.py  harness.py  mcp_commands.py  multi_model.py  payloads.py  sessions.py  setup.py
configs/: README.md  harness.yaml  toolkit.yaml
configs/adversarial/: autodan.yaml  gcg.yaml  judges.yaml  pair.yaml
configs/mutation/: default.yaml
configs/orchestrators/: pyrit.yaml  simple.yaml
dashboards/grafana/: .gitkeep  README.md
dashboards/kibana/: .gitkeep  README.md
data/: adversarial_suffixes.json  guardrail_probes.yaml
data/fixtures/: README.md
data/ground_truth/: README.md
docs/: ADAPTERS.md  ASR_VALIDATION.md  AUTODAN.md  BRANCHES.md  CACHE_BENCHMARK.md  CLI.md  COMPLIANCE_OVERVIEW.md  CONFIGURATION.md  ENVIRONMENT_VARIABLES.md  EVIDENCE_PACK_SPEC.md  FAQ.md  FUTURE_ENHANCEMENTS.md  GATES.md  GCG.md  GOALS.md  GOVERNANCE.md  GUARDRAIL_FINGERPRINTING.md  INDIRECT_INJECTION.md  INTELLIGENCE_ROADMAP.md  KNOWN_ISSUES.md  MCP_ADAPTER.md  METHOD_COMPARISON.md  MIGRATION_B08.7_to_B08.8.md  MODEL_MANAGEMENT.md  MODERN_ATTACKS.md  MUTATION_ENGINE.md  ORCHESTRATORS.md  P2_POLISH_ITEMS.md  PAIR.md  PLUGIN_ARCHITECTURE.md  POLICIES.md  QUICK_ADAPTER.md  README.md  RECIPES.md  REDTEAM.md  REVIEWER_NOTES.md  ROADMAP.md  SETUP.md  STATISTICAL_RIGOR.md  TOOLS_MANIFEST.md  (+5 more)
docs/adr/: 0001-context-and-scope.md  0002-licensing.md  README.md
docs/agents/: CONTEXT.md  RULES.md  TASKS.md
docs/architecture/: UI_HOOKS.md  VALUES.md  pipeline.md
docs/migration/: status.md
docs/runbooks/: ir_prompt_injection.md  release_checklist.md  rollback.md
docs/style/: console.md
docs/threatmodels/: README.md  tm_template.md
examples/: mutation_engine_examples.py  orchestrator_programmatic.py
mappings/: eu_ai_act.yaml  fedramp.yaml  nist_ai_rmf.yaml
migrations/: env.py
migrations/versions/: 001_create_sessions_table.py  002_create_payloads_tables.py
policies/: README.md  content_policy.yaml  tool_allowlist.yaml
recipes/: README.md
recipes/compliance/: README.md  nist_measure.yaml
recipes/safety/: README.md  content_policy_baseline.yaml
recipes/security/: README.md  full_redteam.yaml  prompt_injection_baseline.yaml
registry/: INTEGRATION_STATUS.md  README.md  benchmarks.yaml  tools.yaml
reports/schemas/: conformance_report.schema.json  evidence_manifest.schema.json  recipe.schema.json  run_summary.schema.json
reports/templates/: eu_annex_iv_checklist.md  fedramp_oscal_notes.md  nist_measure_report.md
schemas/: fingerprints.sql  payloads.sql
scripts/: README.md  benchmark_cache.py  cleanup_docs_history.sh  cleanup_git_history.sh  dev_smoke.py  evidence_roundtrip.py  generate_docs_tables.py  hardcore_cache_test.sh  new-adapter.sh  ratchet_lint_changed.py  ratchet_type_baseline.py  test_toolkit.py  test_ux.sh  validate_adapters.sh  validate_recipes.py
src/harness/: README.md  __init__.py
suites/adapters/: adapter_validation.yaml
suites/adversarial/: context_confusion.yaml  delayed_payloads.yaml  encoding_chains.yaml  fuzz_tests.yaml  gcg_attacks.yaml  multi_turn_crescendo.yaml  rag_injection.yaml  tool_misuse.yaml  unicode_bypass.yaml
suites/archived/: 2022_basic_jailbreak.yaml
suites/comparison/: model_comparison.yaml
suites/normal/: README.md  basic_utility.yaml
suites/policies/: content_safety.yaml
suites/rag/: README.md  rag_poisoning.yaml
suites/redteam/: README.md  prompt_injection_advanced.yaml
suites/regression/: README.md
suites/tools/: tool_policy_validation.yaml
suites/ui/: README.md  injection_attacks.yaml
templates/adapters/: README.md  custom_http.yaml
tests/: conftest.py  test_cache_performance.py
tests/adapters/: test_adapter_registry.py  test_batch_query.py  test_cloud_adapters.py  test_connection_helpers.py  test_mock_adapter.py  test_ollama_adapter.py
tests/cli/: test_adapter_quick_security.py  test_replay_commands.py
tests/detectors/: __init__.py  test_harmful_content.py  test_tool_policy.py
tests/engines/: test_mutation_engine.py
tests/executors/: __init__.py  test_recipe_executor.py
tests/fuzz/: README.md
tests/gates/: __init__.py  test_threshold_gate.py
tests/helpers/: cli_runner.py
tests/integration/: README.md  test_adapter_recipes.py  test_cli_branch8.py  test_cli_discovery.py  test_cli_gate.py  (+17 more)
(+255 files in other folders)
