[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-purple-ops"
version = "0.3.1"
description = "Vendor-neutral harness for AI safety, security, and compliance evaluation"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{ name = "AI Purple Ops Authors" }]
dependencies = [
  "pyyaml>=6.0.2,<7",
  "python-dotenv>=1.0.1,<2",
  "rich>=13.7.1,<14",
  "tenacity>=8.3.0,<9",
  "typer>=0.12.5,<1",
  "jsonschema>=4.23.0,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=5.0,<6",
  "hypothesis>=6.100,<7",
  "ruff>=0.6,<1",
  "black>=24.8,<25",
  "mypy>=1.11,<2",
  "bandit>=1.7.9,<2",
  "pip-audit>=2.7,<3",
  "pre-commit>=3.8,<4",
  "types-PyYAML>=6.0.12,<7",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
packages = { find = { where = ["src"] } }
